--- a/app/src/main/res/layout/activity_authentication.xml
+++ b/app/src/main/res/layout/activity_authentication.xml
@@ -7,10 +7,6 @@
     android:orientation="vertical">
 
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -44,7 +40,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:visibility="gone"
-                    android:src="@drawable/no_logo"/>
+                    android:src="@drawable/no_logo"
+                    android:contentDescription="@string/passcode" />
 
 
                 <TextView
@@ -109,7 +106,6 @@
 
         </RelativeLayout>
 
-    </LinearLayout>
 
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
