--- a/app/src/main/res/layout/activity_branch_block.xml
+++ b/app/src/main/res/layout/activity_branch_block.xml
@@ -41,6 +41,7 @@
                 android:id="@+id/cardmark_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:orientation="vertical"
                 android:padding="@dimen/spacing_mlarge">
 
@@ -80,7 +81,7 @@
                         android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
                         android:src="@drawable/ic_branch"
-                        android:tint="@color/colorPrimary" />
+                        app:tint="@color/colorPrimary" />
 
 
                     <EditText
@@ -91,7 +92,6 @@
                         android:background="@drawable/edit_text_round_bg_white"
                         android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                         android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
-                        android:editable="false"
                         android:focusable="false"
                         android:fontFamily="@font/montserrat"
                         android:hint="Select Branch"
@@ -116,7 +116,7 @@
                         android:layout_gravity="center"
                         android:layout_marginLeft="10dp"
                         android:src="@drawable/ic_branch"
-                        android:tint="@color/colorPrimary" />
+                        app:tint="@color/colorPrimary" />
 
 
                     <EditText
@@ -127,7 +127,6 @@
                         android:background="@drawable/edit_text_round_bg_white"
                         android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                         android:drawableRight="@drawable/ic_arrow_drop_down_black_24dp"
-                        android:editable="false"
                         android:focusable="false"
                         android:fontFamily="@font/montserrat"
                         android:hint="Select Block"
@@ -146,6 +145,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="35dp"
+                    android:fontFamily="@font/montserrat"
                     android:background="@color/colorPrimary"
                     android:text="VERIFY"
                     android:textColor="@color/white" />
