--- a/app/src/main/res/layout/dialogregistration.xml
+++ b/app/src/main/res/layout/dialogregistration.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
     android:fitsSystemWindows="true"
     android:orientation="vertical">
@@ -46,7 +47,7 @@
             android:paddingLeft="@dimen/spacing_middle"
             android:paddingRight="@dimen/spacing_middle"
             android:src="@drawable/ic_peoples"
-            android:tint="@color/yellow_900" />
+            app:tint="@color/yellow_900" />
 
         <EditText
             android:id="@+id/mobile_no"
