--- a/app/src/main/res/layout/item_list_employee.xml
+++ b/app/src/main/res/layout/item_list_employee.xml
@@ -16,14 +16,14 @@
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_centerInParent="true"
-            android:tint="@color/light_green_500"
+            app:tint="@color/light_green_500"
             app:srcCompat="@drawable/shape_circle" />
 
         <ImageView
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_centerInParent="true"
-            android:tint="@android:color/white"
+            app:tint="@android:color/white"
             app:srcCompat="@drawable/ic_person_black_24dp" />
 
     </RelativeLayout>
