--- a/app/src/main/res/layout/marked_dailog.xml
+++ b/app/src/main/res/layout/marked_dailog.xml
@@ -22,8 +22,8 @@
 
     <ImageView
         android:id="@+id/done"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="53dp"
+        android:layout_height="37dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView3"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
